--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "sdk/user/LiteEMF"]
 	path = sdk/user/LiteEMF
-	url = git@github_cesar.com:LiteEMF/LiteEMF.git
+	url = git@github.com:LiteEMF/LiteEMF.git
+	branch = main
