add LiteEMF driver but not tested

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,38 @@
 		"cpu.h": "c",
 		"asm_type.h": "c",
 		"tuple": "c",
-		"utility": "c"
+		"utility": "c",
+		"app_mg.h": "c",
+		"bsp_loop.h": "c",
+		"app_linein.h": "c",
+		"key_matrix.h": "c",
+		"clock.h": "c",
+		"my_malloc.h": "c",
+		"initializer_list": "c",
+		"type_traits": "c",
+		"xutility": "c",
+		"api_wdt.h": "c",
+		"math.h": "c",
+		"efuse.h": "c",
+		"common.h": "c",
+		"hal_tick.h": "c",
+		"api_system.h": "c",
+		"api_gpio.h": "c",
+		"api_pwm.h": "c",
+		"mcpwm.h": "c",
+		"timer_drv.h": "c",
+		"xtr1common": "c",
+		"api_iic_host.h": "c",
+		"api_spi_host.h": "c",
+		"api_adc.h": "c",
+		"adc_drv.h": "c",
+		"pinmap.h": "c",
+		"hal_gpio.h": "c",
+		"api_log.h": "c",
+		"gpio.h": "c",
+		"errno-base.h": "c",
+		"usb_stack.h": "c",
+		"malloc.h": "c",
+		"sd_host_api.h": "c"
 	}
 }
