LiteEMF 支持使用杰里sdk内部 USB驱动 (HAS_USB_EN控制)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,11 @@
 		"mbox_main.h": "c",
 		"msg.h": "c",
 		"usb_audio_interface.h": "c",
-		"usb_host.h": "c"
+		"usb_host.h": "c",
+		"api_otg.h": "c",
+		"dev_manage.h": "c",
+		"msd.h": "c",
+		"device.h": "c",
+		"ui_common.h": "c"
 	}
 }
