解决编译问题,注意需要进入sdk/目录下打开vscode编译

--- a/sdk/.vscode/tasks.json
+++ b/sdk/.vscode/tasks.json
@@ -35,6 +35,26 @@
             "group": "build"
         }
         ,{
+            "label": "ac104n_mbox_LiteEMF",
+            "type": "shell",
+            "windows": {
+                "command": ".vscode/winmk.bat ac104n_mbox_LiteEMF"
+            },
+            "command": "make ac104n_mbox_LiteEMF -j`nproc`",
+            "problemMatcher": [],
+            "group": "build"
+        }
+        ,{
+            "label": "clean_ac104n_mbox_LiteEMF",
+            "type": "shell",
+            "windows": {
+                "command": ".vscode/winmk.bat clean_ac104n_mbox_LiteEMF"
+            },
+            "command": "make clean_ac104n_mbox_LiteEMF -j`nproc`",
+            "problemMatcher": [],
+            "group": "build"
+        }
+        ,{
             "label": "ad17n_voice_toy",
             "type": "shell",
             "windows": {
